New in v0.12.6 (??????????)
---------------------------

Yet another unreadable file non-root regress bug fix.  Sorry about
that.

Added --list-increment-sizes option from the development branch.
Previously this option was in the man page but was omitted in the code
(thanks to Michael Schwendt for report).

Restoring/regressing should now take less memory, especially on large
directories.  CPU usage may slightly increase, however.


New in v0.12.5 (2003/09/27)
---------------------------

Fixed bug in --test-server when using --restrict security options
(test would fail improperly).  Thanks to Maik Schreiber for report.

--list-changed-since and --list-at-time now work remotely.
Thanks to Morten Werner Olsen for bug report.

Fixed logic bug that could make restoring extremely slow and waste
memory.  Thanks for Jacques Botha for report.

Fixed bug restoring some directories when mirror_metadata file was
missing (as when made by 0.10.x version).

Regressing and restoring as non-root user now works on directories
that contain unreadable files and directories as long as they are
owned by that user.  Bug report by Arkadiusz Miskiewicz.  Hopefully
this is the last of the unreadable file bugs...


New in v0.12.4 (2003/09/13)
---------------------------

Specified socket type as SOCK_STREAM.  (Error reported by Erik
Forsberg.)

Fixed bug backing up unreadable regular files and directories when
rdiff-backup is run by root on the source site and non-root on the
destination side.  (Reported by Troels Arvin and Arkadiusz
Miskiewicz.)

If there is data missing from the destination dir (for instance if a
user mistakenly deletes it), only warn when restoring, instead of
exiting with error.

Fixed problems with --restrict options that would cause proper
sessions to fail.  Thanks to Randall Nortman for error report.

File examples.html added to distribution; examples section removed
from man page.


New in v0.12.3 (2003/08/08)
---------------------------
